Fix captions logic, edit swagger
